--- a/webpage/templates/webpage/index.html
+++ b/webpage/templates/webpage/index.html
@@ -6,7 +6,7 @@
 
 <div class="container pt-2">
     <h1 class="display-1 text-center">DATENBANK LITERARISCHER BILDZITATE</h2>
-        <p class="lead">Die „Datenbank literarischer Bildzitate“ beinhaltet über 1.500 Verweise
+        <p>Die „Datenbank literarischer Bildzitate“ beinhaltet über 1.500 Verweise
             auf Bildende Kunst aus der deutschsprachigen Literatur der Moderne. Bereitgestellt werden sowohl die
             betreffenden
             Textzitate und eine Abbildung als auch ausführliche bibliographische Angaben und Angaben zum Kunstwerk.</p>
@@ -18,12 +18,12 @@
             entsprechend sind wir nicht die AutorInnen der angeführten Texte und Bilder (Projektinformationen etc.
             ausgenommen). Wenn Sie über unsere Datenbank auf einen Kunstverweis aufmerksam werden, schlagen wir eine
             Zitation wie folgt vor:</p>
-            <blockquote class="blockquote">
+            <p style="margin: 0px 30px;">
                 „[Bibliographische Angabe der Textstelle]. Vgl. dieses Zitat bei: Datenbank
             literarischer Bildzitate. Referenzen auf Bildende Kunst in der deutschsprachigen Literatur der Moderne.
             Entstanden
             unter der Leitung von Konstanze Fliedl. Wien 2014. URL: http://www.univie.ac.at/bildzitat (aufgerufen am
-            ...).“</blockquote>
+            ...).“</p>
 </div>
 
 
