feat: provide some warning text Fixes #5

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     {% include "partials/navbar.html" %}
     <main class="flex-shrink-0">
         <div class="container-fluid">
+            <div class="alert alert-warning text-center fs-4" role="alert">Bitte beachten Sie: Dies ist eine wiederhergestellte Version mit eingeschränkter Funktionalität.</div>
             {% block content %}{% endblock %}
         </div>
     </main>
